make app builds work and security.properties templates

--- a/app/bliin/trunk/server/build.properties
+++ b/app/bliin/trunk/server/build.properties
@@ -3,12 +3,12 @@
 # project props
 project.name=BLIIN
 project.id=bliin01
-version=1.0.0
+version=1.0.1
 
 war.name=bliin01
 
 # specify the directory of the GeoTracing unpacked .war archive
-gt.war.dir=${basedir}/../../../server/build/war
+gt.war.dir=${basedir}/../../../../base/trunk/server/build/war
 
 # specify the directory for your (tomcat) webapps
 deploy.sumatra.dir=/var/keyworx/webapps/test.geotracing.com
