--- a/app/geoskating/trunk/build.properties
+++ b/app/geoskating/trunk/build.properties
@@ -8,7 +8,7 @@ version=1.0.0
 war.name=gs
 
 # specify the directory of the GeoTracing unpacked .war archive
-gt.war.dir=${basedir}/../../server/build/war
+gt.war.dir=${basedir}/../../../base/trunk/server/build/war
 
 # specify the directory for your (tomcat) webapps
 deploy.test.dir=/var/keyworx/webapps/test.geoskating.com
