--- a/app/otter/trunk/build.properties
+++ b/app/otter/trunk/build.properties
@@ -3,10 +3,10 @@
 # project props
 project.name=Otter
 project.id=otter
-version=1.0.2
+version=1.0.3
 
 # specifiy the directory of the GeoTracing unpacked .war archive
-gt.war.dir=${basedir}/../../server/build/war
+gt.war.dir=${basedir}/../../../base/trunk/server/build/war
 
 # specify the directory for your (tomcat) webapps
 deploy.test.dir=/var/keyworx/webapps/test.geotracing.com
