only comments+license info added

--- a/base/trunk/external/build.properties
+++ b/base/trunk/external/build.properties
@@ -53,6 +53,10 @@ proguard.dir=${geotracing.external.dir}/${proguard}
 pushlet=pushlet-2.0.2
 pushlet.dir=${geotracing.external.dir}/${pushlet}
 
+# Sun J2EE Servlet API - for compiling
+servlet=servlet-2.3
+servlet.dir=${geotracing.external.dir}/${servlet}
+
 #
 # END external provider libraries and versions
 #
