--- a/base/trunk/server/build.properties
+++ b/base/trunk/server/build.properties
@@ -3,13 +3,13 @@
 # project props
 project.name=GeoTracing
 project.id=geotracing
-version=1.1.0
+version=1.1.1
 
 # your PATH must point to the bin where the Jikes compiler is
 build.compiler=jikes
 
 war.name=gt
-deploy.test.dir=/var/keyworx/webapps/test.geotracing.com
+deploy.local.dir=/var/keyworx/webapps/test.geotracing.com
 deploy.live.dir=/Volumes/homes/httpd/geotracing.com
 
 
