just some config changes for new system

--- a/app/bliin/trunk/server/build.properties
+++ b/app/bliin/trunk/server/build.properties
@@ -11,7 +11,7 @@ war.name=bliin01
 gt.war.dir=${basedir}/../../../../base/trunk/server/build/war
 
 # specify the directory for your (tomcat) webapps
-deploy.sumatra.dir=/var/keyworx/webapps/test.geotracing.com
+deploy.local.dir=/var/keyworx/webapps/test.geotracing.com
 # deploy.pundit.dir=/Volumes/homes/httpd/geotracing.com
 
 
