--- a/app/geoskating/trunk/build.properties
+++ b/app/geoskating/trunk/build.properties
@@ -11,7 +11,7 @@ war.name=gs
 gt.war.dir=${basedir}/../../../base/trunk/server/build/war
 
 # specify the directory for your (tomcat) webapps
-deploy.test.dir=/var/keyworx/webapps/test.geoskating.com
+deploy.local.dir=/var/keyworx/webapps/test.geoskating.com
 deploy.pundit.dir=/Volumes/homes/httpd/geoskating.com
 
 
