--- a/app/otter/trunk/build.properties
+++ b/app/otter/trunk/build.properties
@@ -9,7 +9,7 @@ version=1.0.3
 gt.war.dir=${basedir}/../../../base/trunk/server/build/war
 
 # specify the directory for your (tomcat) webapps
-deploy.test.dir=/var/keyworx/webapps/test.geotracing.com
+deploy.local.dir=/var/keyworx/webapps/test.geotracing.com
 deploy.live.dir=/Volumes/homes/httpd/geotracing.com
 
 
