--- a/app/otter/trunk/build.xml
+++ b/app/otter/trunk/build.xml
@@ -81,12 +81,12 @@ $Id: build.xml,v 1.3 2006-04-26 12:39:44 just Exp $
 		<delete dir="${build.dir}"/>
 	</target>
 
-	<target name="deploy-test">
-		<copy file="${project.war}" todir="${deploy.test.dir}" overwrite="true"/>
+	<target name="deploy-local">
+		<copy file="${project.war}" todir="${deploy.local.dir}" overwrite="true"/>
 	</target>
 
-	<target name="deploy-test-raw">
-		<copy todir="${deploy.test.dir}/${project.id}" overwrite="true">
+	<target name="deploy-local-raw">
+		<copy todir="${deploy.local.dir}/${project.id}" overwrite="true">
 			<fileset dir="${home.webapp.dir}"/>
 		</copy>
 	</target>
