--- a/app/walkandplay/trunk/client/web/wp/map/gmap-keys.properties
+++ b/app/walkandplay/trunk/client/web/wp/map/gmap-keys.properties
@@ -1,5 +1,5 @@
-test.url=test.waag.org/wp
-test.key=ABQIAAAAgbRczGdUGFScFxOsmC_JghT-FXFJHe9jhpd7qk1O1uOjSHcqIhTMuvEXcj0oNjmsZvCSH1SQgN4s8Q
+test.url=test.walkandplay.com/wp
+test.key=ABQIAAAAgbRczGdUGFScFxOsmC_JghQTXugY1hKOxQM2csodIntPwf1c1RT-ud8UL-SRSmvEGf5zbRKps5oI_w
 
 prod.url=www.walkandplay.com/wp/
 prod.key=ABQIAAAAgbRczGdUGFScFxOsmC_JghQZy5wX802wfxBuzn1fR0dr7Iv7hRSKGPlEjhjkpRi_9M3Wpjwuz1jv_w
