moved to kwx 1.0.6rc3 and first changes for PostGIS migration

--- a/base/trunk/external/build.properties
+++ b/base/trunk/external/build.properties
@@ -30,7 +30,7 @@ btapi=btapi-1.0
 btapi.dir=${geotracing.external.dir}/${btapi}
 
 # KeyWorx distro - provider: www.keyworx.org
-keyworx=keyworx-1.0.6rc2
+keyworx=keyworx-1.0.6rc3
 keyworx.dir=${geotracing.external.dir}/${keyworx}
 
 # J2ME MIDP20 API - for compiling
@@ -44,6 +44,10 @@ mppsdk.dir=${geotracing.external.dir}/${mppsdk}
 # J2ME Multimedia API - for compiling
 mmapi=mmapi
 mmapi.dir=${geotracing.external.dir}/${mmapi}
+
+# Postgis JDBC driver - provider: postgis.refractions.net
+postgis-jdbc=postgis-jdbc-1.1.1
+postgis-jdbc.dir=${geotracing.external.dir}/${postgis-jdbc}
 
 # J2ME ProGuard obfuscator - provider: proguard.sourceforge.net
 proguard=proguard
