base: small changes

--- a/base/trunk/external/build.properties
+++ b/base/trunk/external/build.properties
@@ -29,6 +29,10 @@ avetana.dir=${geotracing.external.dir}/${avetana}
 btapi=btapi-1.0
 btapi.dir=${geotracing.external.dir}/${btapi}
 
+# DOJO AJAX edition JS client library - provider: http://dojotoolkit.org
+dojo-ajax=dojo-0.3.1-ajax
+dojo-ajax.dir=${geotracing.external.dir}/${dojo-ajax}
+
 # KeyWorx distro - provider: www.keyworx.org
 keyworx=keyworx-1.0.6rc3
 keyworx.dir=${geotracing.external.dir}/${keyworx}
