--- a/app/bliin/trunk/server/webapp/bliin01/ota/mt.properties
+++ b/app/bliin/trunk/server/webapp/bliin01/ota/mt.properties
@@ -1,5 +1,6 @@
 # put here the URL based on your hostname
 test.url=test.bliin.com/bliin01
+prod.url=bliin.com/bliin01
 sumatra.url=test.geotracing.com/bliin01
 gps.sample.interval=15000
 
